<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInAtctivity"
    android:background="@color/black"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:text="@string/sing_in_informaition"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textSize="30sp"
            />


        <EditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:background="@drawable/textview_border_2"
            android:ems="10"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/grey" />

        <EditText
            android:id="@+id/loginPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:background="@drawable/textview_border_2"
            android:ems="10"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/grey" />

        <Button
            android:id="@+id/signInbtn"
            android:layout_width="329dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:layout_height="wrap_content"
            android:text="@string/log_in" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/google_acc_sign"
            android:textAlignment="center"
            android:gravity="center_horizontal" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="333dp"
            android:layout_height="43dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/sign_up_for_new_acc"
            android:textAlignment="center"
            android:onClick="signUp"
            android:gravity="center_horizontal" />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>